--- a/pages/dang-nhap.html
+++ b/pages/dang-nhap.html
@@ -69,6 +69,27 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
 .otp-cell:focus{border-color:var(--accent)}
 @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-8px)}}
 @keyframes shine{0%{left:-100%}30%,100%{left:150%}}
+@keyframes fadeInRight{from{opacity:0;transform:translateX(24px)}to{opacity:1;transform:translateX(0)}}
+@keyframes fadeInUp{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
+@keyframes gradientMove{0%,100%{background-position:0% 50%}50%{background-position:100% 50%}}
+.form-box{animation:fadeInRight .5s cubic-bezier(.2,.8,.3,1) both}
+.hero h1{animation:fadeInUp .6s cubic-bezier(.2,.8,.3,1) both}
+.hero p{animation:fadeInUp .6s .1s cubic-bezier(.2,.8,.3,1) both}
+.stats{animation:fadeInUp .6s .2s cubic-bezier(.2,.8,.3,1) both}
+.testi{animation:float 4s ease-in-out infinite, fadeInUp .6s .3s cubic-bezier(.2,.8,.3,1) both}
+.right{animation:fadeInRight .5s .1s cubic-bezier(.2,.8,.3,1) both}
+.submit{transition:all .25s cubic-bezier(.2,.8,.3,1)!important}
+.submit:active{transform:scale(.97)!important}
+.finput{transition:all .2s!important}
+.finput:focus{transform:scale(1.01)!important}
+.atab{transition:.25s cubic-bezier(.2,.8,.3,1)!important}
+.atab.active{box-shadow:0 4px 16px rgba(0,229,255,.15)!important}
+/* Animated gradient title */
+.hl{background:linear-gradient(90deg,#00e5ff,#7c3aed,#f59e0b,#00e5ff);background-size:300%;-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:gradientMove 4s ease infinite}
+/* Hero stats glow */
+.sv span{text-shadow:0 0 20px rgba(0,229,255,.5)}
+/* Right panel top gradient line */
+.right::before{content:'';position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,transparent,var(--accent),var(--accent2),transparent);pointer-events:none}
 @media(max-width:800px){.left{display:none}.right{width:100%;border:none}}
 </style>
 </head>
@@ -120,7 +141,7 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
         <div class="iw"><span class="pre">🔒</span><input class="finput" id="lp" type="password" placeholder="Nhập mật khẩu"><span class="eye" onclick="tp('lp',this)">👁️</span></div>
       </div>
       <div class="rem-row"><div class="cw" onclick="this.querySelector('.chk').classList.toggle('on')"><div class="chk on"></div>Ghi nhớ đăng nhập</div></div>
-      <button class="submit" id="btn-l" onclick="doLogin()">Đăng nhập →</button>
+      <button class="submit" id="btn-l" onclick="SFX&&SFX.click();doLogin()">Đăng nhập →</button>
       <div class="ffoot">Chưa có tài khoản? <a href="#" onclick="showF('register',null);return false">Đăng ký miễn phí</a></div>
     </div>
     <!-- REGISTER -->
@@ -138,7 +159,7 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
         <div class="strength"><div class="seg" id="s1"></div><div class="seg" id="s2"></div><div class="seg" id="s3"></div><div class="seg" id="s4"></div></div>
         <div class="slbl" id="slbl">Nhập mật khẩu</div>
       </div>
-      <button class="submit" id="btn-r" onclick="doReg()">Tạo tài khoản miễn phí →</button>
+      <button class="submit" id="btn-r" onclick="SFX&&SFX.click();doReg()">Tạo tài khoản miễn phí →</button>
       <div class="ffoot">Đã có tài khoản? <a href="#" onclick="showF('login',null);return false">Đăng nhập</a></div>
     </div>
     <!-- FORGOT -->
@@ -167,6 +188,12 @@ canvas{position:fixed;inset:0;z-index:0;pointer-events:none}
   </div>
 </div>
 <script>
+
+// Mini SFX for login page
+const SFX = {
+  click(){try{const c=new(window.AudioContext||window.webkitAudioContext)(),o=c.createOscillator(),g=c.createGain();o.connect(g);g.connect(c.destination);o.type='sine';o.frequency.value=1200;g.gain.setValueAtTime(.08,c.currentTime);g.gain.exponentialRampToValueAtTime(.001,c.currentTime+.06);o.start();o.stop(c.currentTime+.06);}catch(e){}},
+  success(){try{const c=new(window.AudioContext||window.webkitAudioContext)();[523,659,784].forEach((f,i)=>{const o=c.createOscillator(),g=c.createGain();o.connect(g);g.connect(c.destination);o.frequency.value=f;g.gain.setValueAtTime(.2,c.currentTime+i*.08);g.gain.exponentialRampToValueAtTime(.001,c.currentTime+i*.08+.2);o.start(c.currentTime+i*.08);o.stop(c.currentTime+i*.08+.2);});}catch(e){}}
+};
 function applyTheme(t){document.documentElement.setAttribute('data-theme',t);localStorage.setItem('lt369_theme',t);document.getElementById('tt').textContent=t==='dark'?'☀️':'🌙'}
 function toggleTheme(){applyTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark')}
 applyTheme(localStorage.getItem('lt369_theme')||'dark');
@@ -182,8 +209,8 @@ function showF(id,el){['login','register','forgot'].forEach(f=>{document.getElem
 function tp(id,icon){const i=document.getElementById(id);i.type=i.type==='password'?'text':'password';icon.textContent=i.type==='password'?'👁️':'🙈'}
 function chkStr(v){const sg=['s1','s2','s3','s4'].map(id=>document.getElementById(id));const lb=document.getElementById('slbl');sg.forEach(s=>s.className='seg');if(!v){lb.textContent='Nhập mật khẩu';return}let sc=0;if(v.length>=8)sc++;if(/[A-Z]/.test(v))sc++;if(/[0-9]/.test(v))sc++;if(/[^A-Za-z0-9]/.test(v))sc++;const cl=['w','w','m','s'],lb2=['Quá yếu','Yếu','Trung bình','Mạnh','Rất mạnh'];for(let i=0;i<sc;i++)sg[i].classList.add(cl[Math.min(sc-1,3)]);lb.textContent=lb2[sc]}
 function saveName(n){localStorage.setItem('lt369_user',n.charAt(0).toUpperCase()+n.slice(1))}
-function doLogin(){const n=document.getElementById('ln').value.trim(),p=document.getElementById('lp').value,err=document.getElementById('lerr'),btn=document.getElementById('btn-l');if(!n||!p){err.style.display='flex';return}err.style.display='none';btn.textContent='⏳ Đang đăng nhập...';btn.disabled=true;const dn=n.includes('@')?n.split('@')[0]:n;saveName(dn);setTimeout(()=>{btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
-function doReg(){const n=document.getElementById('rn').value.trim(),e=document.getElementById('re').value.trim(),p=document.getElementById('rp').value,btn=document.getElementById('btn-r');if(!n||!e||!p){alert('Nhập đủ thông tin!');return}saveName(n);btn.textContent='⏳ Đang tạo...';btn.disabled=true;setTimeout(()=>{btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
+function doLogin(){const n=document.getElementById('ln').value.trim(),p=document.getElementById('lp').value,err=document.getElementById('lerr'),btn=document.getElementById('btn-l');if(!n||!p){err.style.display='flex';return}err.style.display='none';btn.textContent='⏳ Đang đăng nhập...';btn.disabled=true;const dn=n.includes('@')?n.split('@')[0]:n;saveName(dn);setTimeout(()=>{SFX.success();btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
+function doReg(){const n=document.getElementById('rn').value.trim(),e=document.getElementById('re').value.trim(),p=document.getElementById('rp').value,btn=document.getElementById('btn-r');if(!n||!e||!p){alert('Nhập đủ thông tin!');return}saveName(n);btn.textContent='⏳ Đang tạo...';btn.disabled=true;setTimeout(()=>{SFX.success();btn.textContent='✅ Thành công!';btn.style.background='linear-gradient(135deg,#10b981,#059669)';setTimeout(()=>{location.href="dashboard.html"},700)},1100)}
 function qLogin(pv){const n=prompt('Đăng nhập bằng '+pv+'\nNhập tên của bạn:');if(!n)return;saveName(n);location.href="dashboard.html"}
 function showOtp(){if(!document.getElementById('fpe').value.trim()){alert('Nhập email đã đăng ký!');return}document.getElementById('fp1').style.display='none';document.getElementById('fp2').style.display='block';setTimeout(()=>document.querySelector('.otp-cell').focus(),100)}
 function on(el,idx){const cs=document.querySelectorAll('.otp-cell');if(el.value&&idx<5)cs[idx+1].focus()}
